--- a/index.html
+++ b/index.html
@@ -79,22 +79,23 @@
           </div>
           <div class="col-md-8 col-sm-8 p-3 align-self-center">
             <div class="showcase-right">
-              <h1 style="font-size: 33px;">
+              <h1 style="font-size: 30px;margin-bottom:5px">
                 Nithin Kumar H V
               </h1>
-              <h2>Full Stack Web Developer</h2>
+              <h5>Full Stack Web Developer</h5>
+              <h5>nithinkumarhv01@gamil.com <a href="mailto: nithinkumarhv01@gamil.com" style="color:black"><i class="fa fa-envelope fa-x" ></i></a></h5>
               <div class="icons">
-                <a href="#!">
+                <a href="https://www.linkedin.com/in/nithin-kumar-h-v-54870816a/">
                   <i class="fab fa-linkedin fa-2x"></i>
                 </a>
-                <a href="#!">
+                <a href="https://github.com/NithinkumarHV">
                   <i class="fab fa-github fa-2x"></i>
                 </a>
-                <a href="#!">
+                <a href="https://www.instagram.com/nithin_kumar_gowda/">
                   <i class="fab fa-instagram fa-2x"></i>
                 </a>
-                <a href="#!">
-                  <i class="fab fa-facebook fa-2x"></i>
+                <a href="tel: +919482640130">
+                  <i class="fa fa-mobile-alt fa-2x"></i>
                 </a>
               </div>
             </div>
@@ -228,7 +229,7 @@
         <h2>My Work Experience</h2>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 " >
           <div class="card" style="width: 100%;">
             <img
               src="img/Picture1.png"
@@ -256,7 +257,7 @@
              </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 " >
           <div class="card" style="width: 100%;">
             <img
               src="img/logo.png"
@@ -290,6 +291,44 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div id="education" class="container text-center p-3">
+      <div class="pb-3">
+        <h1>Education</h1>
+      </div>
+      <div class="row ">
+        <div class="col-md-4 ">
+          <div class="card" >
+            <div class="card-body">
+              <h5 class="card-title">SSLC</h5>
+              <h5 class="card-title">Karnataka Board</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Vagdevi English Medium School </h6>
+              <p class="card-text">Percentage : 97.44</p>
+              
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4"><div class="card" >
+          <div class="card-body">
+            <h5 class="card-title">PUC</h5>
+            <h5 class="card-title">Karnataka Board</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Government PU College </h6>
+            <p class="card-text">Percentage : 97.67 PCMB</p>
+
+
+          </div>
+        </div></div>
+        <div class="col-md-4"><div class="card" >
+          <div class="card-body">
+            <h5 class="card-title">Bachelor of Engineering</h5>
+            <h5 class="card-title">From VTU</h5>
+            <h6 class="card-subtitle mb-2 text-muted">PES Institute of Technology , Bengaluru</h6>
+            <p class="card-text">CGPA : 8.57 Computer Science</p>
+
+          </div>
+        </div></div>
       </div>
     </div>
 
