--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="#">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Interests</a>
+              <a class="nav-link" href="#">Education</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Skills</a>
@@ -296,7 +296,7 @@
 
     <div id="education" class="container text-center p-3">
       <div class="pb-3">
-        <h1>Education</h1>
+        <h2>Education</h2>
       </div>
       <div class="row ">
         <div class="col-md-4 ">
@@ -304,7 +304,7 @@
             <div class="card-body">
               <h5 class="card-title">SSLC</h5>
               <h5 class="card-title">Karnataka Board</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Vagdevi English Medium School </h6>
+              <h6 class="card-subtitle mb-2 text-muted">Vagdevi  School , Thirthahalli</h6>
               <p class="card-text">Percentage : 97.44</p>
               
             </div>
@@ -314,7 +314,7 @@
           <div class="card-body">
             <h5 class="card-title">PUC</h5>
             <h5 class="card-title">Karnataka Board</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Government PU College </h6>
+            <h6 class="card-subtitle mb-2 text-muted">Government PU College , Thirthahalli</h6>
             <p class="card-text">Percentage : 97.67 PCMB</p>
 
 
@@ -331,6 +331,66 @@
         </div></div>
       </div>
     </div>
+
+    <div id="skills" class="container text-center p-3">
+      <div class="pb-3">
+        <h2>Technical Skills</h2>
+      </div>
+      <div class="row">
+       <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+         <button class="btn btn-primary btn-md btn-block">HTML & CSS</button>
+       </div>
+       <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+        <button class="btn btn-success btn-md btn-block">BootStrap</button>
+      </div>
+      <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+        <button class="btn btn-primary btn-md btn-block">Firebase</button>
+       </div>
+       <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+        <button class="btn btn-success btn-md btn-block">ReactJs & Redux</button>
+       </div>
+      </div>
+      <div class="row">
+         <div class="col-md-6 col-sm-6 col-lg-3 skill-item" >
+          <button class="btn btn-primary btn-md btn-block">MySQL & MongoDB</button>
+         </div>
+         <div class="col-md-6 col-sm-6 col-lg-3 skill-item" >
+          <button class="btn btn-success btn-md btn-block">NodeJS & ExpressJS</button>
+         </div>
+        <div class="col-md-6 col-sm-6 col-lg-3 skill-item" >
+         <button class="btn btn-primary btn-md btn-block">Progressive Web Apps</button>
+        </div>
+        <div class="col-md-6 col-sm-6 col-lg-3 skill-item" >
+         <button class="btn btn-success btn-md btn-block">Full Stack Web development</button>
+        </div>
+       </div>
+    </div>
+
+    <div id="languages" class="container text-center p-3">
+      <div class="pb-3">
+        <h2>Languages Known</h2>
+      </div>
+      <div class="row">
+       <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+         <button class="btn btn-success btn-md btn-block">C, C++</button>
+       </div>
+       <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+        <button class="btn btn-primary btn-md btn-block">Java</button>
+      </div>
+      <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+        <button class="btn btn-success btn-md btn-block">JavaScript</button>
+       </div>
+       <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+        <button class="btn btn-primary btn-md btn-block">Python</button>
+       </div>
+      </div>
+    </div>
+
+    <footer >
+    <div id="footer" class="container-fluid text-center p-3">
+      Copyright &copy; 2020 nithinkumarhv.com
+    </div>
+  </footer>
 
     <!-- Modals for projects Player Panel -->
     <div
