added media queries xs,sm,md

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="#">My Website</a>
+        <a class="navbar-brand" href="#">Portfolio</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -68,7 +68,7 @@
     <section id="showcase">
       <div class="container text-center">
         <div class="row align-items-center justify-content-center">
-          <div class="col-md-4 col-sm-4 p-3 align-self-center">
+          <div class="col-md-5 col-sm-5 col-lg-4 align-self-center">
             <div class="showcase-left">
               <img
                 src="img/Nithin.jpg"
@@ -77,9 +77,9 @@
               />
             </div>
           </div>
-          <div class="col-md-8 col-sm-8 p-3 align-self-center">
+          <div class="col-md-7 col-sm-7 p-3  col-lg-8 align-self-center">
             <div class="showcase-right">
-              <h1 style="font-size: 30px;margin-bottom:5px">
+              <h1>
                 Nithin Kumar H V
               </h1>
               <h5>Full Stack Web Developer</h5>
@@ -229,8 +229,8 @@
         <h2>My Work Experience</h2>
       </div>
       <div class="row">
-        <div class="col-md-6 " >
-          <div class="card" style="width: 100%;">
+        <div class="col-md-6 card" >
+          <div style="width: 100%;">
             <img
               src="img/Picture1.png"
               class="card-img-top mx-auto img-fluid"
@@ -257,8 +257,8 @@
              </div>
           </div>
         </div>
-        <div class="col-md-6 " >
-          <div class="card" style="width: 100%;">
+        <div class="col-md-6 card" >
+          <div style="width: 100%;">
             <img
               src="img/logo.png"
               class="card-img-top mx-auto img-fluid"
@@ -299,35 +299,27 @@
         <h2>Education</h2>
       </div>
       <div class="row ">
-        <div class="col-md-4 ">
-          <div class="card" >
-            <div class="card-body">
+        <div class="col-md-4 card">
+            <div class="card-body" >
               <h5 class="card-title">SSLC</h5>
               <h5 class="card-title">Karnataka Board</h5>
               <h6 class="card-subtitle mb-2 text-muted">Vagdevi  School , Thirthahalli</h6>
               <p class="card-text">Percentage : 97.44</p>
-              
-            </div>
           </div>
         </div>
-        <div class="col-md-4"><div class="card" >
+        <div class="col-md-4 card">
           <div class="card-body">
             <h5 class="card-title">PUC</h5>
             <h5 class="card-title">Karnataka Board</h5>
             <h6 class="card-subtitle mb-2 text-muted">Government PU College , Thirthahalli</h6>
             <p class="card-text">Percentage : 97.67 PCMB</p>
-
-
-          </div>
         </div></div>
-        <div class="col-md-4"><div class="card" >
+        <div class="col-md-4 card">
           <div class="card-body">
             <h5 class="card-title">Bachelor of Engineering</h5>
             <h5 class="card-title">From VTU</h5>
             <h6 class="card-subtitle mb-2 text-muted">PES Institute of Technology , Bengaluru</h6>
             <p class="card-text">CGPA : 8.57 Computer Science</p>
-
-          </div>
         </div></div>
       </div>
     </div>
