--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
     <div id="languages" class="container text-center p-3">
       <div class="pb-3">
-        <h2>Languages Known</h2>
+        <h2>Programming Skills</h2>
       </div>
       <div class="row">
        <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
@@ -545,8 +545,8 @@
           </div>
         </div>
       </div>
-    </div>
-
+     </div>
+    </body>
     <script>
       window.sr = ScrollReveal();
       sr.reveal('.navbar-brand',{
@@ -563,11 +563,12 @@
         origin: 'right',
         distance: '300px',
       });
-      sr.reveal('#skills',{
+      sr.reveal('#skills ',{
         duration: 2000,
         origin: 'right',
-        distance: '300px',
+        distance: '300px',   
       });
+      
     </script>
     
     <script>
@@ -596,7 +597,7 @@
         });
       });
       </script>
-  </body>
+  
   
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
