--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       href="css/bootstrap.css"
       type="text/css"
     />
-    
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>Profile</title>
@@ -71,7 +72,7 @@
       <div class="container text-center">
         <div class="row align-items-center justify-content-center">
           <div class="col-md-5 col-sm-5 col-lg-4 align-self-center">
-            <div class="showcase-left">
+            <div class="showcase-left" data-aos="zoom-in-up" data-aos-duration="1000">
               <img
                 src="img/Nithin.jpg"
                 class="rounded-circle mx-auto d-block img-fluid"
@@ -80,7 +81,7 @@
             </div>
           </div>
           <div class="col-md-7 col-sm-7 p-3  col-lg-8 align-self-center">
-            <div class="showcase-right">
+            <div class="showcase-right" data-aos="zoom-in-left" data-aos-duration="1000">
               <h1>
                 Nithin Kumar H V
               </h1>
@@ -231,7 +232,7 @@
         <h2>My Work Experience</h2>
       </div>
       <div class="row">
-        <div class="col-md-6 card" >
+        <div class="col-md-6 card" data-aos="flip-right" data-aos-duration="1000">
           <div style="width: 100%;">
             <img
               src="img/Picture1.png"
@@ -259,7 +260,7 @@
              </div>
           </div>
         </div>
-        <div class="col-md-6 card" >
+        <div class="col-md-6 card" data-aos="flip-left" data-aos-duration="1000">
           <div style="width: 100%;">
             <img
               src="img/logo.png"
@@ -331,30 +332,30 @@
         <h2>Technical Skills</h2>
       </div>
       <div class="row">
-       <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+       <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-up" data-aos-duration="1000">
          <button class="btn btn-primary btn-md btn-block">HTML & CSS</button>
        </div>
-       <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+       <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-up" data-aos-duration="1000">
         <button class="btn btn-success btn-md btn-block">BootStrap</button>
       </div>
-      <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+      <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-up" data-aos-duration="1000">
         <button class="btn btn-primary btn-md btn-block">Firebase</button>
        </div>
-       <div class="col-md-6 col-sm-6 col-lg-3 skill-item">
+       <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-up" data-aos-duration="1000">
         <button class="btn btn-success btn-md btn-block">ReactJs & Redux</button>
        </div>
       </div>
       <div class="row">
-         <div class="col-md-6 col-sm-6 col-lg-3 skill-item" >
+         <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-down" data-aos-duration="1000">
           <button class="btn btn-primary btn-md btn-block">MySQL & MongoDB</button>
          </div>
-         <div class="col-md-6 col-sm-6 col-lg-3 skill-item" >
+         <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-down" data-aos-duration="1000">
           <button class="btn btn-success btn-md btn-block">NodeJS & ExpressJS</button>
          </div>
-        <div class="col-md-6 col-sm-6 col-lg-3 skill-item" >
+        <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-down" data-aos-duration="1000">
          <button class="btn btn-primary btn-md btn-block">Progressive Web Apps</button>
         </div>
-        <div class="col-md-6 col-sm-6 col-lg-3 skill-item" >
+        <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-down" data-aos-duration="1000">
          <button class="btn btn-success btn-md btn-block">Full Stack Web development</button>
         </div>
        </div>
@@ -575,6 +576,10 @@
           } // End if
         });
       });
+      </script>
+
+      <script>
+        AOS.init();
       </script>
   
   
