responsiveness media queries

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 data-toggle="modal"
                 data-target="#playerpanel"
               >
-                More Info
+                Info
               </button>
               <button type="button" class="btn btn-success">
                 <a
@@ -176,7 +176,7 @@
                 data-toggle="modal"
                 data-target="#DevConnector"
               >
-                More Info
+                 Info
               </button>
               <button type="button" class="btn btn-success">
                 <a
@@ -239,14 +239,14 @@
               class="card-img-top mx-auto img-fluid"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body ">
               <h5 class="card-title">Intern at PharmEasy</h5>
-              <p class="card-text">
-                From : Jan  2020 to Feb  2020 (2 Months)
+              <p class="card-text text-left">
+                <strong>From : </strong> Jan  2020 to Feb  2020 (2 Months)
               </br>
                 Worked under docstat and did feature enhancements of the DocStat Admin Panel.
               </br>
-                Technologies Used : Reactjs, Redux, Nodejs, MySql, Sequelize
+              <strong>Technologies Used : </strong> Reactjs, Redux, Nodejs, MySql, Sequelize
               </p>
               <button
                 type="button"
@@ -269,12 +269,12 @@
             />
             <div class="card-body">
               <h5 class="card-title">Developer for STATS campaign</h5>
-              <p class="card-text">
-                From : May  2020 - Present 
+              <p class="card-text text-left">
+                <strong>From : </strong> May  2020 - Present 
               </br>
                 Built a website for Stay at Shivamogga campaign and maintaining it presently.  
               </br>
-              Technologies Used :  Nodejs, MySql, Sequelize   
+               <strong>Technologies Used : </strong>  Nodejs, MySql, Sequelize   
               </p>
               <button
                 type="button"
@@ -282,7 +282,7 @@
                 data-toggle="modal"
                 data-target="#stats"
               >
-                More Info
+                Info
               </button>
               <button type="button" class="btn btn-success">
                 <a
@@ -332,10 +332,10 @@
         <h2>Technical Skills</h2>
       </div>
       <div class="row">
-       <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-up" data-aos-duration="1000">
+       <div class=" col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-up" data-aos-duration="1000">
          <button class="btn btn-primary btn-md btn-block">HTML & CSS</button>
        </div>
-       <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-up" data-aos-duration="1000">
+       <div class=" col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-up" data-aos-duration="1000">
         <button class="btn btn-success btn-md btn-block">BootStrap</button>
       </div>
       <div class="col-md-6 col-sm-6 col-lg-3 skill-item" data-aos="zoom-in-up" data-aos-duration="1000">
