--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 Nithin Kumar H V
               </h1>
               <h5>Full Stack Web Developer proficient in, </h5>
-              <h5>ReactJS, NodeJS, ExpressJS , MySQl and MongoDB</h5>
+              <h5>ReactJS, NodeJS, ExpressJS and MySQl </h5>
               <h5>nithinkumarhv01@gamil.com <a href="mailto: nithinkumarhv01@gamil.com" style="color:black"><i class="fa fa-envelope fa-x" ></i></a></h5>
               <div class="icons">
                 <a href="https://www.linkedin.com/in/nithin-kumar-h-v-54870816a/">
