hosted using firebase, changed the node name

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     />
     <link
       rel="stylesheet"
-      href="css/bootstrap.css"
+      href="public/css/bootstrap.css"
       type="text/css"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
     <title>Profile</title>
   </head>
   <body>
@@ -74,7 +74,7 @@
           <div class="col-md-5 col-sm-5 col-lg-4 align-self-center">
             <div class="showcase-left" data-aos="zoom-in-up" data-aos-duration="1000">
               <img
-                src="img/Nithin.jpg"
+                src="public/img/Nithin.jpg"
                 class="rounded-circle mx-auto d-block img-fluid"
                 alt=""
               />
@@ -142,7 +142,7 @@
         </ol>
         <div class="carousel-inner" data-aos="zoom-in-up" data-aos-duration="1000">
           <div class="carousel-item active" data-interval="5000" >
-            <img src="img/image.jpg" class="d-block w-100" alt="..." />
+            <img src="public/img/image.jpg" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-md-block">
               <h5>Player Panel</h5>
               <p>
@@ -166,7 +166,7 @@
             </div>
           </div>
           <div class="carousel-item" data-interval="5000">
-            <img src="img/image.jpg" class="d-block w-100" alt="..." />
+            <img src="public/img/image.jpg" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-md-block" >
               <h5>DevConnector</h5>
               <p>
@@ -190,7 +190,7 @@
             </div>
           </div>
           <div class="carousel-item" data-interval="5000">
-            <img src="img/image.jpg" class="d-block w-100" alt="..." />
+            <img src="public/img/image.jpg" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-md-block mx-auto">
               <h5>Slack Bot</h5>
               <p>
@@ -208,7 +208,7 @@
             </div>
           </div>
           <div class="carousel-item" data-interval="5000">
-            <img src="img/image.jpg" class="d-block w-100" alt="..." />
+            <img src="public/img/image.jpg" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-md-block">
               <h5>WeConnect</h5>
               <p>
@@ -232,7 +232,7 @@
             </div>
           </div>
           <div class="carousel-item" data-interval="5000">
-            <img src="img/image.jpg" class="d-block w-100" alt="..." />
+            <img src="public/img/image.jpg" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-md-block">
               <h5>Smart Classroom</h5>
               <p>
@@ -280,7 +280,7 @@
         <div class="col-md-6 card" data-aos="flip-right" data-aos-duration="1000">
           <div style="width: 100%;">
             <img
-              src="img/Picture1.png"
+              src="public/img/Picture1.png"
               class="card-img-top mx-auto img-fluid"
               alt="..."
             />
@@ -308,7 +308,7 @@
         <div class="col-md-6 card" data-aos="flip-left" data-aos-duration="1000">
           <div style="width: 100%;">
             <img
-              src="img/logo.png"
+              src="public/img/logo.png"
               class="card-img-top mx-auto img-fluid"
               alt="..."
             />
@@ -670,6 +670,6 @@
   
   
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-  <script src="js/bootstrap.js"></script>
+  <script src="public/js/bootstrap.js"></script>
   
 </html>
